package Q2;

public interface Reportable {
    String generateReport();
}
