package Q2;

public enum VehicleType {
    CAR, SUV, TRUCK
}
